# folder-search

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts  wdio.conf.ts
.cargo/: config.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  RELEASING.md  TODO.md  architecture.md  features.md  indexing-confirmation-dialog.md  indexing.md  manual-e2e-tests.md  requirements.md
e2e/: app.test.ts
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/config/: mod.rs
src-tauri/src/domain/embedding/: mod.rs
src-tauri/src/domain/indexer/: chunker.rs  mod.rs
src-tauri/src/domain/llm/: chat_template.rs  mod.rs  rag.rs
src-tauri/src/domain/search/: hybrid.rs  mod.rs
src-tauri/src/domain/system/: mod.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/config/: mod.rs
src-tauri/src/infra/hnsw/: mod.rs
src-tauri/src/infra/llama/: mod.rs
src-tauri/src/infra/model/: mod.rs
src-tauri/src/infra/model_registry/: mod.rs
src-tauri/src/infra/onnx/: mod.rs
src-tauri/src/infra/system/: mod.rs
src-tauri/src/infra/tantivy/: mod.rs
src-tauri/src/infra/vector_cache/: mod.rs
src-tauri/src/infra/watcher/: mod.rs
src/components/chat/: ChatMessage.test.tsx  ChatMessage.tsx
src/components/indexing/: IndexingDialog.tsx
src/components/layout/: MainPanel.test.tsx  MainPanel.tsx  Sidebar.test.tsx  Sidebar.tsx
src/components/search/: FolderSelector.test.tsx  FolderSelector.tsx  Preview.test.tsx  Preview.tsx  ResultList.test.tsx  ResultList.tsx  SearchBar.test.tsx  SearchBar.tsx
src/components/settings/: GeneralSection.test.tsx  GeneralSection.tsx  IndexManagementSection.test.tsx  IndexManagementSection.tsx  ModelManagementSection.test.tsx  (+3 more)
src/lib/: tauri.ts
src/test/: setup.ts  tauri-mock.ts
src/types/: index.ts
