[package]
name = "folder-search"
version = "0.1.0"
description = "Local knowledge base search application"
authors = ["you"]
edition = "2021"

[lib]
name = "folder_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tantivy = "0.25"
lindera = { version = "2", features = ["embed-ipadic"] }
lindera-tantivy = { version = "2", features = ["embed-ipadic"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
