[package]
name = "folder-search"
version = "0.1.0"
description = "Local knowledge base search application"
authors = ["sato1043@updater.cc"]
edition = "2021"

[lib]
name = "folder_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tantivy = "0.25"
lindera = { version = "2", features = ["embed-ipadic"] }
lindera-tantivy = { version = "2", features = ["embed-ipadic"] }
walkdir = "2"
ort = "2.0.0-rc.12"
ndarray = "0.17"
hnsw_rs = "0.3"
anndists = "0.1"
tokenizers = "0.22"
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"
llama-cpp-2 = { version = "0.1.140", default-features = false }
encoding_rs = "0.8"
bincode = "1"
sha2 = "0.10"
notify = "7"
notify-debouncer-mini = "0.5"
sysinfo = "0.32"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
